--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     />
   </head>
   <body>
-    <div class="wrapper">
-      <main id="main">
-        <h1 id="title">Dr. Norman Bolaug</h1>
+    <div class="main-box">
+      <div class="wrapper">
+        <header>Dr. Norman Bolaug
         <p>The man who saved a billion lives</p>
-        <figure id="img-div">
+        </header>
+        <main class="main">
+            <div class="hero">
           <img
             id="image"
             src="/image/tribute-page-main-image.jpg"
             alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"
           />
+          </div>
+          </main>
           <caption id="img-caption">
             Dr. Norman Borlaug, third from the left, trains biologists in Mexico
             on how to increase wheat yields - part of his life-long war on
@@ -106,28 +110,24 @@
             </li>
             <li><strong>2009</strong> - dies at the age of 95.</li>
           </ul>
-          <blockquote
-            cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
-          >
-            <p>
-              "Borlaug's life and achievement are testimony to the far-reaching
-              contribution that one man's towering intellect, persistence and
-              scientific vision can make to human peace and progress."
-            </p>
-            <cite>-- Indian Prime Minister Manmohan Singh</cite>
-          </blockquote>
-          <h3>
+          <p class="quote">
+            "Borlaug's life and achievement are testimony to the far-reaching
+            contribution that one man's towering intellect, persistence and
+            scientific vision can make to human peace and progress."
+          </p>
+          <p>-- Indian Prime Minister Manmohan Singh</p>
+          <footer>
             If you have time, you should read more about this incredible human
             being on his
             <a
-              id="tribute-link"
+              id="-link"
               href="https://en.wikipedia.org/wiki/Norman_Borlaug"
               target="_blank"
               >Wikipedia entry</a
-            >.
-          </h3>
+            >
+          </footer>
         </section>
-      </main>
+      </div>
     </div>
   </body>
 </html>
